# writing

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MODEL-BAKEOFF.md  README.md  RELEASING.md  eslint.config.mjs  human-overview.md  package-lock.json  package.json  publish-mac.sh  publish.ps1  tsconfig.json  vite.config.ts
.claude/: baseline-ledger.md
assistant-handoff/: ASSISTANT-SPEC.md  HANDOFF.md  WIRING.md
decisions/: 0003-tokens-css-app-css-adopted-verbatim.md  0004-drag-re-grafted-onto-designed-binder-recorded.md  0005-animations-are-css-only.md  0008-editor-frozen-additive-only-ruling.md  0009-p7-focus-effects-move-inside-prosemirror.md  0012-w49-w45-boundary-scope.md  0015-trial-abuse-defense-spend-cap.md  RECENT.md  act-then-mark-webhook-idempotency.md  aienabled-default-stays-true-this-wave-production.md  anti-ai-isms-harness-client-injected-remote-config.md  auto-detect-entity-scene-linking.md  lapsed-subscription-behavior-for-the-eventual.md  licensing-model-inherited-pre-locked.md  scene-exclude-storage-placeholder.md  scene-prose-lives-in-a-y-xmlfragment.md  server-side-verb-config-billing.md  streaming-protocol-prompt-assembly-location.md
design-reference/: AUTOLINK-SPEC.md  BATCH-HANDOFF.md  Design tokens.html  ENTITY-TYPES-SPEC.md  FEATURE-WAVE-PLAN.md  FIND-FOCUS-SPEC.md  FULL-ENTRY-SPEC.md  Full Entry - explorations.html  GOALS-SPEC.md  HANDOFF.md  OUTLINER-SPEC.md  app.css  (+44 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: byok.rs  byok_engine.rs  byok_local.rs  byok_openai.rs  grammar.rs  lib.rs  license.rs  local_endpoint.rs  main.rs
src-tauri/tests/: discover_models_roundtrip.rs  endpoint_contract.rs
(+798 files in other folders)
