[package]
name = "writing"
version = "0.11.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "writing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harper-core = { version = "=2.0.0", features = ["concurrent"] }
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
keyring = "4"
keyring-core = "1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Windows-only: DWM corner-preference API for native Win11 rounded window corners
# on the frameless (decorations:false) window — no transparency required.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
raw-window-handle = "0.6"

